# citelens

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Makefile  README.md  example.json  pyproject.toml  real_case_example.json
citelens/: __init__.py  cli.py  dto.py  lib.py
tests/: mock.py  test_misc.py  test_model.py  test_vector.py
